toggle-header-btns

--- a/css/_footer.sass
+++ b/css/_footer.sass
@@ -29,7 +29,10 @@ footer
             max-height: 26.5px
         
         &:nth-last-child(3n+1)
-          a
+          p
+            +p-m
+            font-size: 15px
+            line-height: 19px
             color: $blue2
         
         &:nth-of-type(6)
