--- a/css/_responsive.sass
+++ b/css/_responsive.sass
@@ -1150,9 +1150,9 @@
       ul
         grid-gap: 11px
         li
-          a
-            font-size: 10px
-            line-height: 14px
+          a , p
+            font-size: 10px !important
+            line-height: 14px !important
           
           img
             width: 20px
