--- a/css/common.sass
+++ b/css/common.sass
@@ -16,6 +16,10 @@ section
   min-height: 100vh
   +flex_5
 
+@keyframes sp-anime 
+  100%  
+    transform: rotate(360deg) 
+
 footer
   margin-top: auto
 
@@ -247,28 +251,142 @@ button
             text-align: center
             word-break: break-word
 
-    .modal-dialog 
+    #overlay	
+      position: fixed
+      top: 0
+      z-index: 100
+      width: 100%
+      height: 100%
+      display: none
+      background: rgba(0,0,0,0.6)
+    
+      .cv-spinner 
+        height: 100%
+        display: flex
+        justify-content: center
+        align-items: center  
+    
+      .spinner 
+        width: 40px
+        height: 40px
+        border: 4px #ddd solid
+        border-top: 4px #2e93e6 solid
+        border-radius: 50%
+        animation: sp-anime 0.8s infinite linear
+    
+    .modal-dialog
       .modal-content
         padding: 25px
-        .same-style-box
-          position: relative
+        .typeModal-static-box
           display: grid
-          grid-gap: 35px
-          padding: 28px 26px
-          background: $white
-          box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1)
-          border-radius: 15px
-          .close
-            top: 15px
-            right: 15px
-            background: none
-            border: 0
-            opacity: 1
-            min-height: unset
-            height: unset
+          grid-gap: 19px
+          .same-style-box
+            position: relative
+            display: grid
+            grid-gap: 35px
+            padding: 28px 26px
+            background: $white
+            box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1)
+            border-radius: 15px
+            .close
+              top: 15px
+              right: 15px
+              background: none
+              border: 0
+              opacity: 1
+              min-height: unset
+              height: unset
         
+        .typeModal-pattern-box
+          >p
+            margin-bottom: 6px
+            +p-m
+            font-size: 24px
+            line-height: 36px
+            color: $black2
+            text-align: center
+            word-break: break-all
+          
+          .standart-size
+            background: $white
+            box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1)
+            border-radius: 15px
+            padding: 25px
+
+            textarea
+              margin-top: 24px
+            &:not(:last-child)
+              margin-bottom: 16px
+            
+            &.text-label
+              font-size: 24px
+              +p-m
+              font-size: 24px
+              line-height: 36px
+              color: $black2
+              word-break: break-all
+            
+            &.radiobox
+              padding: 16px 25px 20px
+              display: grid
+              grid-gap: 16px
+              grid-template-columns: 1fr 1fr
+              >p
+                grid-column-start: 1
+                grid-column-end: 3
+                +p-m
+                font-size: 24px
+                line-height: 36px
+                color: $black2
+                word-break: break-all
+              .custom-label 
+                display: block
+                position: relative
+                height: 50px
+                border: 1px solid $border
+                border-radius: 10px
+                cursor: pointer
+                +flex_2
+                +p-m
+                font-size: 20px
+                line-height: 25px
+                color: $blue2
+                -webkit-user-select: none
+                -moz-user-select: none
+                -ms-user-select: none
+                user-select: none
+
+                input
+                  position: absolute
+                  opacity: 0
+                  cursor: pointer
+                  &:checked ~ .checkmark 
+                    background-color: $white
+                    border: 1px solid $border
+                  &:checked ~ .checkmark:after 
+                    display: block
+
+                .checkmark 
+                  position: absolute
+                  top: 11px
+                  right: 12px
+                  height: 28px
+                  width: 28px
+                  background-color: $gray6
+                  border-radius: 5px
+                  &::after
+                    content: ""
+                    position: absolute
+                    display: none
+                    top: 3px
+                    right: 3px
+                    width: 20px
+                    height: 20px
+                    background: $blue2
+
+
         .add-new-form
-          margin: 0 auto 4px
+          margin: 0 auto 5px
           padding: 0 25px
           max-width: 333px
           +flex_2
@@ -472,7 +590,12 @@ form
         .modal-body
           .files-box
             display: grid
-            grid-gap: 100px
+            grid-gap: 35px
+            >p
+              +p-m
+              font-size: 24px
+              line-height: 36px
+              color: $black2
             label
               +flex_1
               grid-gap: 22px
@@ -610,15 +733,21 @@ form
     max-width: max-content
     margin-left: auto
 
-.close
-  position: absolute
-  width: 42px
-  height: 42px
-  opacity: 1
-  padding: 0 !important
-  right: 16px
-  top: 16px
-  margin: 0 !important
+.modal
+  &:not(.sureModal)
+    .close
+      position: absolute
+      width: 42px
+      height: 42px
+      opacity: 1
+      padding: 0 !important
+      right: 16px
+      top: 16px
+      margin: 0 !important
+  
+  .close
+    opacity: 1
+
 
 .same-big-box
   flex: 1
@@ -847,72 +976,73 @@ form
                     path
                       fill: $white
 
-               
-
-.sureModal
-  .modal-dialog
-    max-width: 550px
-    height: 100%
-    +flex_2
-    flex-direction: column
-    margin: 0 auto
-    .modal-content
-      padding: 35px 50px
-      .modal-header 
-        .modal-title
-          +p-m
-          font-size: 20px
-          line-height: 30px
-          color: $blue2
-          text-align: center
-      
-      .modal-body
-        +flex_5
-        grid-gap: 65px
-        .sure_btns
-          width: 100%
-          display: grid
-          grid-template-columns: 1fr 1fr
-          grid-gap: 50px
-          margin-top: 50px
-          button
-            +flex_2
-            border-radius: 15px
-            height: 50px
+.modal
+  &.sureModal
+    .modal-dialog
+      max-width: 550px
+      height: 100%
+      +flex_2
+      flex-direction: column
+      margin: 0 auto
+      .modal-content
+        padding: 35px 50px
+        .modal-header 
+          .modal-title
             +p-m
             font-size: 20px
             line-height: 30px
-            width: 100%
-            color: $white
-            &.close
-              border: 1px solid $blue2
-              color: $blue2
-              position: relative
-              top: unset
-              right: unset
-              background: white
-        
-        .edit_recept
-          +flex_5
-          grid-gap: 20px
-          p
-            +p-m
-            font-size: 15px
-            line-height: 22px
             color: $blue2
             text-align: center
         
-          button
-            margin: 0 auto
-            +flex_2
-            border-radius: 15px
-            height: 50px
-            +p-m
-            font-size: 20px
-            line-height: 30px
+        .modal-body
+          +flex_5
+          grid-gap: 65px
+          .sure_btns
             width: 100%
-            color: $white
-            width: max-content
+            display: grid
+            grid-template-columns: 1fr 1fr
+            grid-gap: 50px
+            margin-top: 50px
+            button
+              +flex_2
+              border-radius: 15px
+              height: 50px
+              +p-m
+              font-size: 20px
+              line-height: 30px
+              width: 100%
+              max-width: 100%
+              color: $white
+              &.close
+                border: 1px solid $blue2
+                color: $blue2
+                position: relative
+                top: unset
+                right: unset
+                background: white
+
+          
+          .edit_recept
+            +flex_5
+            grid-gap: 20px
+            p
+              +p-m
+              font-size: 15px
+              line-height: 22px
+              color: $blue2
+              text-align: center
+          
+            button
+              margin: 0 auto
+              +flex_2
+              border-radius: 15px
+              height: 50px
+              +p-m
+              font-size: 20px
+              line-height: 30px
+              width: 100%
+              color: $white
+              width: max-content
 
 .new-heading-box
   +flex_1
