--- a/css/_patients.sass
+++ b/css/_patients.sass
@@ -25,14 +25,14 @@
         border-bottom-left-radius: 0
 
       p
-        +l-m
+        +p-m
         font-size: 20px
         line-height: 25px
-        color: $blue
+        color: $black2
         +flex_2
       
       .add_btn_box
-        min-width: 200px
+        min-width: 300px
         width: unset !important
         grid-gap: 20px !important
         button
@@ -42,7 +42,6 @@
             background: $white !important
             color: $blue2 !important
           
-    
     .add-patient-box
       +flex_5
       justify-content: space-between
@@ -57,7 +56,7 @@
           font-size: 20px
           line-height: 25px
           color: $white
-          background: $blue
+          background: $blue2
           border-radius: 10px
           height: 50px
     
@@ -84,7 +83,7 @@
           font-size: 20px
           line-height: 25px
           color: $white
-          background: $blue
+          background: $blue2
           border-radius: 10px
           height: 50px
     
@@ -94,10 +93,10 @@
     width: 900px
     margin: 0 auto
     p
-      +l-m
+      +p-m
       font-size: 25px
       line-height: 31px
-      color: $blue
+      color: $black2
       +flex_2
     
     form
@@ -128,10 +127,10 @@
     display: grid
     grid-gap: 25px
     > p
-      +l-m
+      +p-m
       font-size: 25px
       line-height: 31px
-      color: $blue
+      color: $black2
       +flex_2
     
     .result-box
@@ -150,10 +149,10 @@
           display: grid
           grid-gap: 20px
           p
-            +l-m
+            +p-m
             font-size: 20px
             line-height: 25px
-            color: $blue
+            color: $black2
             display: flex
             align-items: center
             grid-gap: 10px
@@ -161,7 +160,7 @@
         .see_link
           height: 50px
           padding: 0 15px
-          background: $blue
+          background: $blue2
           border-radius: 10px
           +p-m
           font-size: 20px
