--- a/css/common.sass
+++ b/css/common.sass
@@ -74,14 +74,14 @@ button
                 +p-m
                 font-size: 20px
                 line-height: 30px
-                color: $blue
+                color: $blue2
             
             .advise
               +flex_2
               +l-m
               font-size: 15px
               line-height: 19px
-              color: $blue
+              color: $blue2
 
           .form-second
             display: grid
@@ -90,7 +90,7 @@ button
               +p-m
               font-size: 15px
               line-height: 22px
-              color: $blue
+              color: $blue2
             
             .select-box
               display: flex
@@ -100,7 +100,7 @@ button
                 +p-m
                 font-size: 25px
                 line-height: 30px
-                color: $blue
+                color: $blue2
               select
                 position: relative
                 width: 100%
@@ -122,7 +122,7 @@ button
               +p-m
               font-size: 15px
               line-height: 22px
-              color: $blue
+              color: $blue2
             
             .radio-box
               display: grid
@@ -140,7 +140,7 @@ button
                 +l-m
                 font-size: 20px
                 line-height: 25px
-                color: $blue
+                color: $blue2
                 -webkit-user-select: none
                 -moz-user-select: none
                 -ms-user-select: none
@@ -579,7 +579,7 @@ button
     line-height: 25px
     color: $white
     border-radius: 10px
-    background: $blue
+    background: $blue2
     width: max-content
     margin: 0 auto
 
@@ -714,7 +714,7 @@ form
 .modal-header
   +flex_2
   .modal-title
-    +p-r
+    +p-m
     font-size: 24px
     line-height: 36px
     color: $black2
@@ -729,7 +729,7 @@ form
     line-height: 27px
     color: $white
     border-radius: 10px
-    background: $blue
+    background: $blue2
     max-width: max-content
     margin-left: auto
 
@@ -763,7 +763,7 @@ form
     +l-m
     font-size: 20px
     line-height: 25px
-    color: $blue
+    color: $blue2
     text-align: center
   
   .img-box
@@ -782,7 +782,7 @@ form
     +flex_2
     padding: 9px 
     width: 100%
-    background: $blue
+    background: $blue2
     +p-m
     font-size: 15px
     line-height: 19px
@@ -803,10 +803,10 @@ form
   padding: 55px 0 105px
   p.title-list
     +flex_2
-    +l-m
+    +p-m
     font-size: 25px
     line-height: 31px
-    color: $blue
+    color: $black2
     padding: 15px 0
 
   
@@ -814,24 +814,25 @@ form
     min-width: 150px
     min-height: 50px
     +flex_2
-    background: $blue
-    +l-m
+    background: $blue2
+    +p-r
     font-size: 20px
     line-height: 25px
     color: $white
     border-radius: 10px
   .list-add-box
     background: $white
-    flex-direction: column
+    +flex_5
+    +flex_1
     height: 180px
     box-shadow: 0px 1px 30px rgba(0, 0, 0, 0.25)
     border-radius: 10px
     padding: 27px 25px 18px
     p
-      +l-m
+      +p-m
       font-size: 20px
       line-height: 25px
-      color: $blue
+      color: $black2
   .item-list
     background: $white
     display: grid
@@ -841,10 +842,10 @@ form
     padding: 10px 40px 35px 30px
     .item-head
       +flex_1
-      +l-m
+      +p-m
       font-size: 20px
       line-height: 25px
-      color: $blue
+      color: $black2
       padding: 12.5px 0
       .same-head-box
         display: flex
@@ -856,10 +857,10 @@ form
       .diagnosis-box
         display: flex
         grid-gap: 12px
-        +l-m
+        +p-m
         font-size: 25px
         line-height: 31px
-        color: $blue
+        color: $black2
         p
           word-break: break-all
 
@@ -870,8 +871,8 @@ form
         flex: none
         +flex_2
         border-radius: 10px
-        background-color: $blue
-        +l-m
+        background-color: $blue2
+        +p-r 
         font-size: 20px
         line-height: 25px
         color: $white
@@ -891,7 +892,7 @@ form
       +p-m
       font-size: 20px
       line-height: 23px
-      color: $blue
+      color: $blue2
       border-radius: 10px
       background: $white
       width: max-content
@@ -900,7 +901,7 @@ form
         background: $blue2
       
       &.cancel_btn
-        border: 1px solid $blue
+        border: 1px solid $blue2
 
 .info-room
   .inner-container 
@@ -927,7 +928,7 @@ form
             word-break: break-all
 
             &.editable
-              border: 2px solid $blue
+              border: 2px solid $blue2
               color: $black
               padding: 5px 10px
               background: $blue_opacity
