--- a/css/_responsive.sass
+++ b/css/_responsive.sass
@@ -576,8 +576,11 @@
 
   .patients-main-container
     padding: 30px 0
+    grid-gap: 30px
     .patients-first-line
-      grid-gap: 50px
+      width: 100%
+      grid-gap: 20px
+      grid-template-columns: 1fr
       .add-patient-box 
         .add_btn_box
           grid-gap: 9px 
@@ -604,11 +607,14 @@
       
       .same-patient-box 
         height: 190px
+        border: 2px solid $blue2 !important
+        border-radius: 10px !important
         p
           font-size: 17px
           line-height: 21px
     
-    .patients-search 
+    .patients-search
+      width: 100%
       p
         font-size: 21px
         line-height: 25px
@@ -1131,17 +1137,13 @@
       .same-patient-box 
         height: auto
         padding: 15px 23px 18px
-        grid-gap: 30px
+        grid-gap: 20px
         p
           font-size: 17px
           line-height: 21px
     
     .patients-search 
       width: 100%
-      padding: 13px 16.5px 18px
-      background: #FFFFFF
-      box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.25)
-      border-radius: 10px
       grid-gap: 25px
       p
         font-size: 17px
@@ -1152,10 +1154,6 @@
           height: 35px
           font-size: 14px
           line-height: 17px
-          box-shadow: none
-          background: #EEEEEE
-          border: 2px solid #E6E6E6
-          border-radius: 5px 0px 0px 5px
           padding: 0 13px
         button
           height: 35px
@@ -1749,6 +1747,9 @@
       grid-gap: 25px
       .add-patient-box 
         .add_btn_box
+          min-width: unset
+          width: 100%
+          margin: 0
           button
             min-height: 30px
             font-size: 12px
