--- a/css/common.css
+++ b/css/common.css
@@ -2180,9 +2180,13 @@ footer .footer_main_container .footer_author {
   }
   .patients-main-container {
     padding: 30px 0;
+    grid-gap: 30px;
   }
   .patients-main-container .patients-first-line {
-    grid-gap: 50px;
+    width: 100%;
+    grid-gap: 20px;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
   }
   .patients-main-container .patients-first-line .add-patient-box .add_btn_box {
     grid-gap: 9px;
@@ -2210,10 +2214,15 @@ footer .footer_main_container .footer_author {
   }
   .patients-main-container .patients-first-line .same-patient-box {
     height: 190px;
+    border: 2px solid #4098FF !important;
+    border-radius: 10px !important;
   }
   .patients-main-container .patients-first-line .same-patient-box p {
     font-size: 17px;
     line-height: 21px;
+  }
+  .patients-main-container .patients-search {
+    width: 100%;
   }
   .patients-main-container .patients-search p {
     font-size: 21px;
@@ -2766,7 +2775,7 @@ footer .footer_main_container .footer_author {
   .patients-main-container .patients-first-line .same-patient-box {
     height: auto;
     padding: 15px 23px 18px;
-    grid-gap: 30px;
+    grid-gap: 20px;
   }
   .patients-main-container .patients-first-line .same-patient-box p {
     font-size: 17px;
@@ -2774,11 +2783,6 @@ footer .footer_main_container .footer_author {
   }
   .patients-main-container .patients-search {
     width: 100%;
-    padding: 13px 16.5px 18px;
-    background: #FFFFFF;
-    -webkit-box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.25);
-            box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
     grid-gap: 25px;
   }
   .patients-main-container .patients-search p {
@@ -2789,11 +2793,6 @@ footer .footer_main_container .footer_author {
     height: 35px;
     font-size: 14px;
     line-height: 17px;
-    -webkit-box-shadow: none;
-            box-shadow: none;
-    background: #EEEEEE;
-    border: 2px solid #E6E6E6;
-    border-radius: 5px 0px 0px 5px;
     padding: 0 13px;
   }
   .patients-main-container .patients-search form button {
@@ -3443,6 +3442,11 @@ footer .footer_main_container .footer_author {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     grid-gap: 25px;
+  }
+  .patients-main-container .patients-first-line .add-patient-box .add_btn_box {
+    min-width: unset;
+    width: 100%;
+    margin: 0;
   }
   .patients-main-container .patients-first-line .add-patient-box .add_btn_box button {
     min-height: 30px;
