--- a/css/_responsive.sass
+++ b/css/_responsive.sass
@@ -453,8 +453,13 @@
 
   .same-big-box
     padding: 16px 25px 30px !important
+    
 
   .info-room
+    .index-main-container
+      flex-wrap: wrap
+      .same-big-box
+        height: unset
     .inner-container
       padding: 15px 0 30px
       .edit-box 
@@ -658,6 +663,7 @@
               height: 40px
               font-size: 16px
               line-height: 20px
+
 
   footer
     .footer_main_container 
