--- a/css/_responsive.sass
+++ b/css/_responsive.sass
@@ -111,9 +111,6 @@
         font-size: 35px
         line-height: 42px
 
-      ul
-        padding: 0 60px
-
   .inner-container
     grid-gap: 13px
     padding: 20px 0 15px
@@ -991,6 +988,12 @@
                     width: 40px
 
   section
+    .index-main-container
+      padding: 25px 0
+      grid-gap: 20px
+      flex-direction: column
+      grid-template-columns: 1fr
+
     .message-container 
       .message-box 
         p
@@ -1005,7 +1008,6 @@
         button
           bottom: 8.5px
           top: unset
-
 
     .entrance-box
       grid-gap: 17px
@@ -1059,10 +1061,6 @@
             min-width: 90px
             width: max-content
 
-  .index-main-container
-    padding: 25px 0
-    grid-gap: 20px
-    flex-direction: column
   
   .same-big-box
     padding: 12px 20px 20px !important
@@ -1653,6 +1651,9 @@
             line-height: 17px
             min-width: 75px
 
+    .index-main-container
+      padding: 30px 25px
+      
   .info-room 
     .inner-container
       padding-left: 25px
@@ -1730,9 +1731,6 @@
                   height: 50px
                   img
                     width: 32px
-
-  .index-main-container
-    padding: 30px 25px
 
   .recept-box
     padding: 16px 13px 19px
