--- a/css/_header.sass
+++ b/css/_header.sass
@@ -66,7 +66,7 @@ header
           border-radius: 5px
 
       .sign_in_out
-        background: $blue
+        background: $blue2
         +flex_2
         min-width: 110px
         padding: 5px 10px
@@ -258,6 +258,21 @@ header
         color: $blue2
         &:hover
           border-bottom: 1px solid $blue2
+
+.dropdown-menu
+  min-width: 100%
+  will-change: unset !important
+  font-size: unset
+  &.show
+    width: 100%
+  .dropdown-item
+    padding: 5px 10px
+    white-space: nowrap
+    +p-r
+    font-size: 14px
+    line-height: 18px
+    color: $black2
+    clear: unset
 
 .simplebar-track 
   &.simplebar-vertical
